--- a/P4.md
+++ b/P4.md
@@ -1,1 +1,17 @@
 # Proyecto4
+ #Parte: Realice una simulación del sistema de comunicaciones como en la sección 3.2., pero utilizando una modulación QPSK en lugar de una modulación BPSK. Deben mostrarse las imágenes enviadas y recuperadas y las formas de onda.
+ 
+ Para resolver esta sección se reutiliza el código propuesto previamente para la modulación BPSK sin embargo se sabe que matematicamente
+ está solo posee una característica de señal portadora, es decir, solo depende de un coseno o seno, por lo que solo presenta dos símbolos posibles 0 o 1
+ para la modulación propuesta tipo QPSK posee dos portadoras por lo que se tienen cuatro símbolos posibles (00,01,10,11) con dos bits por símbolo. Entonces
+ la señal completa se separa en dos señales portadoras, luego se crean los caasos posibles para cuando se tiene 0 o 1 en los bits y además de asignar 
+ el signo a la portadora, esto se realiza con sentencias if a las cuales se deben cumplir ciertas condiciones para pasarle la información a las portadoras.
+ Para demodular y graficar la señal se implementa el código de la nota teórica observando que al variar el SNR en valores negativos se genera 
+ más ruido en la imagen recuperada y si se supera el valor de 3 se tiene un error nulo.
+ 
+ # 2 Parte: Realice pruebas de estacionaridad y ergodicidad a la señal modulada senal_Tx y obtenga conclusiones sobre estas.
+ Con la ayuda del código de laboratorio 4, se recicla el código y se cambia la función de la señal por la deseada portadora.
+ 
+ #  Parte: Determine y grafique la densidad espectral de potencia para la señal modulada senal_Tx
+ Para resolvero primero se le pasa la señal Tx creada desde el punbto con una función de Fourier, se crea el número de la señal y la muestra de la misma,
+ además el tiempo del simbolo, simulación y espacios de frecuencia y ya para finaliza r se plotea los datos de la señal creada con la transformada.
