--- a/P4.md
+++ b/P4.md
@@ -1,5 +1,5 @@
 # Proyecto4
- #Parte: Realice una simulación del sistema de comunicaciones como en la sección 3.2., pero utilizando una modulación QPSK en lugar de una modulación BPSK. Deben mostrarse las imágenes enviadas y recuperadas y las formas de onda.
+ # 1 Parte: Realice una simulación del sistema de comunicaciones como en la sección 3.2., pero utilizando una modulación QPSK en lugar de una modulación BPSK. Deben mostrarse las imágenes enviadas y recuperadas y las formas de onda.
  
  Para resolver esta sección se reutiliza el código propuesto previamente para la modulación BPSK sin embargo se sabe que matematicamente
  está solo posee una característica de señal portadora, es decir, solo depende de un coseno o seno, por lo que solo presenta dos símbolos posibles 0 o 1
